New: Minimum Upgrade Score for Custom Formats
Closes #6800
